--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3'
 services:
   nginx:
-    image: nginx-4dvop
+    image: benoitlaplanche/4dvop:nginx 
     ports:
       - "8080:8080"
   haproxy:
-    image: haproxy-4dvop
+    image: benoitlaplanche/4dvop: haproxy
     ports:
       - "80:80"
     depends_on:
